deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
spec:
  replicas: 3  # Ajusta según la carga esperada y el nivel de redundancia necesario
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: gcr.io/terraform-420123/fastapi-app:v1
        ports:
        - containerPort: 80
