tarjetas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarjetas-deployment
spec:
  replicas: 3  
  selector:
    matchLabels:
      app: tarjetas
  template:
    metadata:
      labels:
        app: tarjetas
    spec:
      containers:
      - name: tarjetas
        image: gcr.io/terraform-420123/tarjetas:1.0.1
        ports:
        - containerPort: 80
