usuarios-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios-deployment
spec:
  replicas: 3  
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
      - name: usuarios
        image: bancoalpes/usuarios:1.0.0  
        ports:
        - containerPort: 5000
