tarjetas-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: tarjetas-service
spec:
  selector:
    app: tarjetas
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 80  
  type: LoadBalancer
*
