usuarios-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuarios-service
spec:
  selector:
    app: usuarios
  ports:
    - protocol: TCP
      port: 5000  
      targetPort: 5000  
  type: LoadBalancer
