mi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"  
spec:
  rules:
  - http:
      paths:
      - path: /tarjetas
        pathType: Prefix
        backend:
          service:
            name: tarjetas-service
            port:
              number: 80
      - path: /usuarios
        pathType: Prefix
        backend:
          service:
            name: usuarios-service
            port:
              number: 5000
